# TalkyBoi

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  talkyboi.desktop  talkyboi.sh
talkyboi/: __init__.py  app.py  config.py
talkyboi/audio/: __init__.py  audio_utils.py  recorder.py
talkyboi/input/: __init__.py  hotkey_listener.py
talkyboi/transcription/: __init__.py  base.py  gemini_client.py  openai_client.py  transcriber.py  whisper_client.py
talkyboi/ui/: __init__.py  main_window.py  quick_window.py
