[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "talkyboi"
version = "0.1.0"
description = "Audio dictation with multi-provider transcription (Gemini, OpenAI, Whisper)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["dictation", "transcription", "speech", "audio", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "PySide6>=6.6.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "google-genai>=1.0.0",
    "pynput>=1.7.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
whisper = ["faster-whisper>=1.0.0"]
all = ["openai>=1.0.0", "faster-whisper>=1.0.0"]

[project.scripts]
talkyboi = "talkyboi.app:run"
talkyboi-quick = "talkyboi.app:run_quick"

[project.urls]
Homepage = "https://github.com/nbhansen/TalkyBoi"
Repository = "https://github.com/nbhansen/TalkyBoi"
Issues = "https://github.com/nbhansen/TalkyBoi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["talkyboi*"]
